; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-encoder.c_get_sei.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-encoder.c_get_sei.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_encoder = type { %struct.TYPE_4__, %struct.TYPE_3__ }
%struct.TYPE_4__ = type { i32 }
%struct.TYPE_3__ = type { i32 (i32, i32**, i64*)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.obs_encoder*, i32**, i64*)* @get_sei to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_sei(%struct.obs_encoder* %0, i32** %1, i64* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.obs_encoder*, align 8
  %6 = alloca i32**, align 8
  %7 = alloca i64*, align 8
  store %struct.obs_encoder* %0, %struct.obs_encoder** %5, align 8
  store i32** %1, i32*** %6, align 8
  store i64* %2, i64** %7, align 8
  %8 = load %struct.obs_encoder*, %struct.obs_encoder** %5, align 8
  %9 = getelementptr inbounds %struct.obs_encoder, %struct.obs_encoder* %8, i32 0, i32 1
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i32 (i32, i32**, i64*)*, i32 (i32, i32**, i64*)** %10, align 8
  %12 = icmp ne i32 (i32, i32**, i64*)* %11, null
  br i1 %12, label %13, label %25

13:                                               ; preds = %3
  %14 = load %struct.obs_encoder*, %struct.obs_encoder** %5, align 8
  %15 = getelementptr inbounds %struct.obs_encoder, %struct.obs_encoder* %14, i32 0, i32 1
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  %17 = load i32 (i32, i32**, i64*)*, i32 (i32, i32**, i64*)** %16, align 8
  %18 = load %struct.obs_encoder*, %struct.obs_encoder** %5, align 8
  %19 = getelementptr inbounds %struct.obs_encoder, %struct.obs_encoder* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 8
  %22 = load i32**, i32*** %6, align 8
  %23 = load i64*, i64** %7, align 8
  %24 = call i32 %17(i32 %21, i32** %22, i64* %23)
  store i32 %24, i32* %4, align 4
  br label %26

25:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %26

26:                                               ; preds = %25, %13
  %27 = load i32, i32* %4, align 4
  ret i32 %27
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
